Finished simple Caching Example

--- a/CachingExample/Web.config
+++ b/CachingExample/Web.config
@@ -13,6 +13,15 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
+    <caching>
+      <outputCacheSettings>
+        <outputCacheProfiles>
+          <!--These are good to be reusable, and can be changed per environement-->
+          <add name="Frequently" duration="3"/>
+          <add name="Rarely" duration="5000"/>
+        </outputCacheProfiles>
+      </outputCacheSettings>
+    </caching>
   </system.web>
   <system.webServer>
     <handlers>
