--- a/CachingExample/CachingExample.csproj
+++ b/CachingExample/CachingExample.csproj
@@ -162,6 +162,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CultureInfoService.cs" />
+    <Compile Include="Services\ICultureInfoService.cs" />
     <Compile Include="Services\ITimeService.cs" />
     <Compile Include="Services\TimeService.cs" />
     <Compile Include="ViewModels\Home\IndexViewModel.cs" />
